# Job-Watcher

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: __init__.py
app/api/routers/: alerts.py  health.py  sources.py  watchlists.py
app/core/: config.py  logging.py  metrics.py
app/db/: __init__.py  session.py
app/models/: alert.py  job_posting.py  source.py  watchlist.py
app/schemas/: __init__.py  alert.py  job_posting.py  source.py  watchlist.py
app/services/: scheduler.py
app/services/notifier/: telegram.py
app/services/scrapers/: base.py  remoteok.py  rss.py
app/workers/: tasks.py  worker.py
job_watcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: entrypoint.sh
tests/: conftest.py  test_api.py
